--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,6 +7,9 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.0",
     "bootstrap": "^5.0.2",
+    "coffee-loader": "^1.0.1",
+    "coffeescript": "1.12.7",
+    "rails-erb-loader": "^5.5.2",
     "sass": "^1.36.0",
     "sass-loader": "10",
     "turbolinks": "^5.2.0",
