add equipe manager

--- a/Frontend/Gemfile
+++ b/Frontend/Gemfile
@@ -22,6 +22,10 @@ gem 'jbuilder', '~> 2.7'
 
 # Facebook share etc.
 gem 'social-share-button'
+
+# View component
+gem "view_component", require: "view_component/engine"
+
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.4.4', require: false
 
