--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,8 +7,11 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.0",
     "bootstrap": "^5.0.2",
+    "bootstrap-icons": "^1.5.0",
     "coffee-loader": "^1.0.1",
     "coffeescript": "1.12.7",
+    "jquery": "^3.6.0",
+    "jquery-ui-dist": "^1.12.1",
     "rails-erb-loader": "^5.5.2",
     "sass": "^1.36.0",
     "sass-loader": "10",
